fixed spacing between buttons and may have added to much padding on about me text

--- a/src/AboutMe/AboutMe.css
+++ b/src/AboutMe/AboutMe.css
@@ -10,4 +10,10 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  /* min-height: 100vh; */
+} 
+
+.aboutMeP {
+  padding-left: 764px;
+  padding-right: 764px;
 }
