--- a/src/Prosjekter/Prosjekter.css
+++ b/src/Prosjekter/Prosjekter.css
@@ -58,6 +58,7 @@
 
 h2 {
   /* display: flex; */
+  text-align: center;
   padding-top: 6px;
   /* padding-bottom: 64px; */
 }
